# whoknows

./: .coderabbit.yml  .deepsource.toml  .env.development  .env.production  .env.template  .gitignore  .pre-commit-config.yaml  .template-source  CD-rust-actix.template-setup.sh  Cargo.toml  Dockerfile  Makefile  README.md  README.rust.md  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  make.txt  migration-tutorial.md  package-lock.json  sonar-project.properties  supervisord.conf
backend/: .env.local.backend  .env.local.backend.template  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile.toml  README.md
backend/.sqlx/: query-3e254f1fa7365f3e8444119a7689390b3f7bb3d7dcecd06230df3216374e2dce.json  query-73741d4f28244e24be3c325111007ec4d59674680d541b209709dfdde7b3ac9e.json  query-7572ba0be81bf95636ac1debabd95e32e96acb7a848430250dee1f4ba4df1061.json  query-d74051d1ba7deb811dd5e51a8c86aa0832dda871a9be66ff97db37faf4ce8229.json  query-f015b1b166a86e2e3b54eaf1aecfeaf0c2a9664137c263b03bb86a8901226cf3.json
backend/db-migration/: docker-compose.yml  index.js  knexfile.js  package-lock.json  package.json  whoknows.tables.sql
backend/db-migration/migrations/: 20250409141333_create_intial_schema.cjs  20250409141333_create_intial_schema.js
backend/db-migration/seeds/: 01_add_admin_user.js
backend/docs/: api.md  architecture.md  cleanup-checklist.md  database.md  documentation-checklist.md  index.md  setup.md
backend/learnings/: sqlx-library.md
backend/scripts/: dev_docker.py  makefile_env_loader.py
backend/src/: main-DESKTOP-19QVLUP.rs  main.rs  models.rs
frontend/: .env.local.frontend.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile-DESKTOP-19QVLUP  LICENSE  Makefile.toml  README.md  nginx-DESKTOP-19QVLUP.conf  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/context/: dir-structure.txt  requirements.md
frontend/context/learnings/: middleware-actix.md
frontend/context/legacy/: Dockerfile.nginx
frontend/cursor/rules/: rules.mdc
frontend/docs/: architecture.md  cleanup-checklist.md  client-side.md  documentation-checklist.md  index.md  proxy-middleware.md  setup.md
frontend/scripts/: dev_docker.py  makefile_env_loader.py
frontend/src/: App.jsx  main.rs
(+155 files in other folders)
