[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4"
