[package]
name = "whoknows_rust_actix_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15" # For loading .env during local development
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Example: SQLite driver (sqlx)
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "macros", "migrate" ] }

[dev-dependencies]
# Add test dependencies here