[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15" # For loading .env during local development
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
prometheus = "0.13"
lazy_static = "1.4"



# Example: SQLite driver (sqlx)
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono" ] }
hex = "0.4.3"

[dev-dependencies]
# Add test dependencies here