[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-rt = "2.9.0"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
log = "0.4"
dotenv = "0.15.0"
awc = "3.1.1"
futures = "0.3.28"
prometheus = "0.13.3"
lazy_static = "1.4.0"
querystring = "1.1"


[profile.dev]
opt-level = 0
debug = true
#split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false
